cast tablesaw column types according to the dataset feature types